# Qsmtp

./: .cirrus.yml  .codecov.yaml  .gitattributes  .lgtm.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  Doxyfile  LICENSE  Makefile  README.md  ctest_qsmtp.cmake  valgrind.supp
lib/: CMakeLists.txt  Makefile  addrsyntax.c  base64.c  cdb.c  control.c  dns.c  dns_helpers.c  fmt.c  getfile.c  ipme.c  libowfatconn.c  log.c  match.c  mime.c  mmap.c  netio.c  qdns.c  qdns_dane.c  ssl_timeoutio.c  tls.c  utf8.c  xtext.c
qremote/: CMakeLists.txt  Makefile  client.c  common_setup.c  conn.c  conn_mx.c  envelope.c  greeting.c  mime.c  qrbdat.c  qrdata.c  qremote.c  reply.c  smtproutes.c  starttlsr.c  status.c  statuscodes.h.tmpl
qsmtpd/: CMakeLists.txt  Makefile  addrparse.c  addrsyntax.c  antispam.c  auth.c  child.c  commands.c  data.c  getfile.c  qsauth_backend_cp.c  qsmtpd.c  queue.c  spf.c  starttls.c  syntax.c  syntax.h  vpop.c  vpopmail.c  xtext.c
qsmtpd/backends/: CMakeLists.txt
qsmtpd/backends/auth_chkpw/: CMakeLists.txt  qsauth_backend_cp.c
qsmtpd/backends/user_vpopm/: CMakeLists.txt  getfile.c  vpop.c
qsmtpd/filters/: CMakeLists.txt  Makefile  badcc.c  badmailfrom.c  boolean.c  check2822.c  dnsbl.c  forceesmtp.c  fromdomain.c  helo.c  ipbl.c  namebl.c  nomail.c  postfix_policy.c  rcpt_filters.c  smtpbugs.c  soberg.c  spf.c  usersize.c  wildcardns.c
tests/: CMakeLists.txt  Qsmtpd_bad_args.cmake  Qsmtpd_more_commands.cmake  Qsmtpd_quit.cmake.in  Qsmtpd_quit_no_ips.cmake.in  Qsmtpd_submission.cmake.in  addrparse_test.c  addrsyntax_test.c  all_filters_test.c  antispam_test.c  auth_be_cp_test.c  auth_dummy.c  auth_errors_test.c  auth_test.c  auth_users.h  authsetup_test.c  bad_pipelining.cmake  base64_test.c  bounce_multi_rcpt.cmake  broken_helo.cmake  cdb_entries.h  cdb_test.c  cmd_args.cmake  cmd_args_ehlo.cmake  cmd_args_helo.cmake  cmd_from_test.c  cmd_rcpt_test.c  connmx_test.c  control_test.c  dns_test.c  ehlo_test.c  envelope_test.c  filter_badcc_test.c  filter_fromdomain_test.c  filter_nomail_test.c  filter_spf.c  filter_wildcardns_test.c  fmt_test.c  getfile_test.c  getmxlist_test.c  (+31 more)
tests/all_filters/1/: session
tests/all_filters/3/user/: badmailfrom
tests/all_filters/4/user/: goodmailfrom
tests/all_filters/5/user/: badmailfrom
tests/all_filters/6/: session
tests/all_filters/6/user/: namebl
tests/authsetup/duplicate_plain/control/: authtypes
tests/authsetup/login_plain/control/: authtypes
tests/filter_badcc/example.net/foo/: badcc
tests/qrdata_test_data/: 8bitAroundSoftbreak.in  longChunkBeforeRecodeMultipart.in  longChunkBeforeRecodeMultipart.out  whitespaceBeforeLinebreak.in  whitespaceBeforeLinebreak.out  wrapHeadersWithLongParts.in  wrapHeadersWithLongParts.out
tests/smtproutes/: CMakeLists.txt  smtproutes_test.c
tests/smtproutes/cert_dir/control/smtproutes.d/: foo.example.net
tests/smtproutes/cert_missing_dir/: errmsg
tests/smtproutes/cert_missing_dir/control/smtproutes.d/: default
tests/smtproutes/cert_missing_key/: errmsg
tests/smtproutes/cert_missing_key/control/smtproutes.d/: foo.example.net
tests/smtproutes/cert_split_default/: expected_cert  expected_key
tests/smtproutes/complete_match/: expected_ip
tests/smtproutes/complete_match/control/: smtproutes
tests/smtproutes/complete_match_dir/: expected_outip  expected_outip6
tests/smtproutes/duplicate_host_dir/: errmsg
tests/smtproutes/invalid_entry_dir/: errmsg
tests/smtproutes/invalid_oip6_dir/: errmsg
tests/smtproutes/invalid_oip_dir/: errmsg
tests/smtproutes/ip4_as_oip6_dir/: errmsg
tests/smtproutes/no_colon/: errmsg
tests/smtproutes/no_colon/control/: smtproutes
tests/smtproutes/no_equal_dir/: errmsg
tests/smtproutes/nomatch/control/: smtproutes
tests/smtproutes/noroute_split_key/: DESCRIPTION  expected_key
tests/smtproutes/port_0/control/: smtproutes
tests/smtproutes/port_0_dir/: errmsg
tests/smtproutes/port_100k/control/: smtproutes
tests/smtproutes/port_100k_dir/: errmsg
tests/smtproutes/port_char/: errmsg
tests/smtproutes/port_char/control/: smtproutes
tests/smtproutes/port_char_no_relay/: errmsg
tests/smtproutes/port_char_no_relay/control/: smtproutes
tests/smtproutes/port_char_no_relay_dir/: errmsg
tests/smtproutes/port_only/control/: smtproutes
tests/smtproutes/start_equal_dir/: errmsg
tests/smtproutes/unresolved/control/: smtproutes
tests/smtproutes/unresolved_dir/: errmsg
tests/smtproutes/with_port/control/: smtproutes
tests/ssl_pp/: CMakeLists.txt  dh1024.pem  dh2048.pem  expired.crt  expired.key  noname.crt  noname.key  rsa2048.pem  rsa512.pem  ssl_pp.c  test-ca.crt  test-ca.key  testcerts.sh  valid1024.crt  valid1024.key  valid1024_san.crt  valid1024_san.key  valid1024_san2.crt  valid1024_san2.key  valid1024_san_cn.crt  valid1024_san_cn.key  valid4096.chain  valid4096.crt  valid4096.key  valid4096_san.chain  valid4096_san.crt  valid4096_san.key  valid4096_san2.crt  valid4096_san2.key  valid4096_san_cn.crt  valid4096_san_cn.key  wildcard1024.crt  wildcard1024.key  wildcard4096.chain  wildcard4096.crt  wildcard4096.key  withca.crt  withca.key
tests/ssl_pp/control/: dh512.pem  rsa1024.pem
tests/starttlsr/: CMakeLists.txt  starttlsr_test.c
tests/starttlsr/tlsclientciphers_bad/control/: tlsclientciphers
tests/starttlsr/tlsclientciphers_good/control/: tlsclientciphers
tests/test_io/: CMakeLists.txt  qs_backtrace.h.in  test_io.c  test_io_log.c  test_io_net.c  test_io_qdns.c  test_io_tls.c  testcase_io.h  testcase_io_p.h
tests/user_exists/: CMakeLists.txt  userexists_test.c
tests/user_exists/defaultdomain/: .qmail-default
tests/user_exists/users/: assign  cdb
tests/users/: assign  cdb
tests/vp_control_test/domain/: filterconf
tests/vp_control_test/domain/user/: filterconf
tests/vp_control_test/inherit/usr/: content
tests/vp_control_test/inherit2/: content
tools/: CMakeLists.txt  Makefile  addipbl.c  clearpass.c  dnsdane.c  dnstxt.c  dumpipbl.c  fcshell.c  qp.c  qsurvey.c  sendremote.c  spfquery.c  testspf.c
tools/tests/: CMakeLists.txt  addipbl_test.sh
(+121 files in other folders)
